--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ inflect = "^6.0.2"
 watchdog = "^2.2.1"
 jupyterlab = "^3.6.1"
 ipykernel = "^6.21.2"
+matplotlib = "^3.7.0"
+seaborn = "^0.12.2"
+tqdm = "^4.64.1"
 
 [build-system]
 requires = ["poetry-core"]
