--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platfo
 decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0"
 entrypoints==0.4 ; python_version >= "3.10" and python_version < "4.0"
 gitdb==4.0.10 ; python_version >= "3.10" and python_version < "4.0"
-gitpython==3.1.30 ; python_version >= "3.10" and python_version < "4.0"
+gitpython==3.1.31 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.10" and python_version < "4"
 importlib-metadata==6.0.0 ; python_version >= "3.10" and python_version < "4.0"
 inflect==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
@@ -24,7 +24,7 @@ pandas==1.5.3 ; python_version >= "3.10" and python_version < "4.0"
 pillow==9.4.0 ; python_version >= "3.10" and python_version < "4.0"
 protobuf==3.20.3 ; python_version >= "3.10" and python_version < "4.0"
 pyarrow==11.0.0 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==1.10.4 ; python_version >= "3.10" and python_version < "4.0"
+pydantic==1.10.5 ; python_version >= "3.10" and python_version < "4.0"
 pydeck==0.8.0 ; python_version >= "3.10" and python_version < "4.0"
 pygments==2.14.0 ; python_version >= "3.10" and python_version < "4.0"
 pympler==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -41,7 +41,8 @@ streamlit==1.18.1 ; python_version >= "3.10" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0"
 toolz==0.12.0 ; python_version >= "3.10" and python_version < "4.0"
 tornado==6.2 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.4.0 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.64.1 ; python_version >= "3.10" and python_version < "4.0"
+typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2022.7 ; python_version >= "3.10" and python_version < "4.0"
 tzlocal==4.2 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==1.26.14 ; python_version >= "3.10" and python_version < "4"
