--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ streamlit = "^1.18.1"
 pandas = "^1.5.3"
 inflect = "^6.0.2"
 tqdm = "^4.64.1"
+stqdm = "^0.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
