--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ rich==13.3.1 ; python_version >= "3.10" and python_version < "4.0"
 semver==2.13.0 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 smmap==5.0.0 ; python_version >= "3.10" and python_version < "4.0"
+stqdm==0.0.5 ; python_version >= "3.10" and python_version < "4.0"
 streamlit==1.18.1 ; python_version >= "3.10" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0"
 toolz==0.12.0 ; python_version >= "3.10" and python_version < "4.0"
