--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs==22.2.0 ; python_version >= "3.10" and python_version < "4.0"
 blinker==1.5 ; python_version >= "3.10" and python_version < "4.0"
 cachetools==5.3.0 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2022.12.7 ; python_version >= "3.10" and python_version < "4"
-charset-normalizer==3.0.1 ; python_version >= "3.10" and python_version < "4"
+charset-normalizer==3.1.0 ; python_version >= "3.10" and python_version < "4"
 click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -32,8 +32,9 @@ pyrsistent==0.19.3 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytz-deprecation-shim==0.1.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2022.7.1 ; python_version >= "3.10" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.28.2 ; python_version >= "3.10" and python_version < "4"
-rich==13.3.1 ; python_version >= "3.10" and python_version < "4.0"
+rich==13.3.2 ; python_version >= "3.10" and python_version < "4.0"
 semver==2.13.0 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 smmap==5.0.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -42,11 +43,11 @@ streamlit==1.19.0 ; python_version >= "3.10" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "4.0"
 toolz==0.12.0 ; python_version >= "3.10" and python_version < "4.0"
 tornado==6.2 ; python_version >= "3.10" and python_version < "4.0"
-tqdm==4.64.1 ; python_version >= "3.10" and python_version < "4.0"
+tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2022.7 ; python_version >= "3.10" and python_version < "4.0"
 tzlocal==4.2 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==1.26.14 ; python_version >= "3.10" and python_version < "4"
 validators==0.20.0 ; python_version >= "3.10" and python_version < "4.0"
-watchdog==2.3.0 ; python_version >= "3.10" and python_version < "4.0" and platform_system != "Darwin"
-zipp==3.14.0 ; python_version >= "3.10" and python_version < "4.0"
+watchdog==2.3.1 ; python_version >= "3.10" and python_version < "4.0" and platform_system != "Darwin"
+zipp==3.15.0 ; python_version >= "3.10" and python_version < "4.0"
