--- a/src/text.yml
+++ b/src/text.yml
@@ -11,7 +11,7 @@ story:
   - "The intent is to approximate nuanced differences in opinion among musical experts. If we assign two songs scores of eight and nine, respectively, our simulated voters will often disagree on which is better. But if we assign two songs scores of two and then, there should be no disagreement which is better."
   
   Establishing a Baseline:
-  - "We use the objective scores to determine which songs should fairly win the contest, and we use these scores to determine which song or songs a voter “likes” the best. To the left are the songs that should win our contests. To see how different voting methods perform, without further ado, let us introduce _The Isle of Musica_."
+  - "We use the objective scores to determine which songs should fairly win the contest, and we use the subjective scores to determine which song or songs a voter “likes” the best. To the left are the songs that should win our contest. To see how different voting methods perform, without further ado, let us introduce _The Isle of Musica_."
   
   The Isle of Musica:
     - "Welcome to the Isle of Musica — an idyllic locale where every citizen lives, breathes, even eats to make music. The Isle of Musica is inhabited by talented professional musicians, engineers, songwriters, and producers — all with different expertises and genre focuses. They all live on the Isle of Musica because of the one value they have in common: their reverence, respect, and passion for music."
@@ -19,19 +19,28 @@ story:
     - "Anyone who believes a song they wrote this year is particularly special can nominate it for the contest. num_voters people live on the Isle, and when Mayor Melody sees the lists of nominees, surprise surprise, num_voters songs have been nominated. Everyone must have picked their personal best."
     - "Running a contest with this many entrants is going to be tricky, but the mayor has a plan. First step, instead of trying to declare one winner in one go, Mayor Melody decides the first round of the contest should be to determine a short list of finalists."
   
-  Alphabetical:
+  First Contest:
     - first contest
-  # Establishing a Baseline:
-  #   - "Mayor Melody wants to make sure her citizens have time to judge each song fairly, so she's given everyone the month off to ensure they can take the time to listen and assess each one. Her and her staff have also printed off massive ballots. She knows her citizens want to know who their competition is, so it's important the voters submit an ordered ranking of all num_songs songs."
+
+  The Power of Randomness:
+    - "Of course, voting this way would take a long time. Plus, the citizens of the Isle don’t actually want a month off work – their work is their passion.They have albums to produce, sound edits to make – they don’t want to drop everything to listen and rate every single song. Plus, even for music lovers, working through num_songs sounds exhausting. Would everything just start to sound the same after awhile? Music lovers are superhuman, but not like that!"
+    - "So Mayor Melody has a better plan that will still ensure a fair election, and it relies on the fact that there are so many dedicated voters. Instead of receiving all num_songs songs, citizens will be sent a randomly chosen subset. This will be much more practical anyway, since the latest technology takes awhile to make it out to the Isle. Mayor Melody was worried voters wouldn’t have room for all num_songs on their Zunes."
+
+  Nullifying Bloc Voting:
+    - While making her rounds in the town square, Mayor Melody got a whiff that individual loyalties might threaten to throw off the otherwise fair Song of the Year contest. After some investigation, the cronyism going on between the heads of certain neighborhoods became clear. For example, in Double Reed Village, Al Pacone was running a campaign to get people to vote for his buddy Kid Lincoln's song, "Defenestration", by offering them a free session at his state-of-the-art studio. And Lucky Luke, over on de Sousa Cul de Sac, was telling his neighbors that if they voted for his song, "Entrepreneur," that he’d do them a big musical favor at a later date.
+    - Mayor Melody had a feeling that this could possibly happen, so she began to think about how to mitigate this issue and ensure it didn’t highjack voting enough to skew the final results. Use the sliders below to see how much (or how little) cronyism affects the final result of the contest.
+
+  bloc_voting_conclusion:
+    - The performance of the above contest is surprisingly similar to that of the one before it. Even when every single voter is in cahoots with someone, the randomization of the contest prevents coordination – not enough of them get the chance to vote for their ring leader. At worst, by not voting for the deserved best song, rather than promote a corrupt song into the finalists, they open up a chance for a near-finalist to make into the list. This phenomen nullifies any attempts at collusion.
 
 instructions:
   select_num_winners:
     - "This contest will determine a small list of finalists from the larger pool of nominees. How many finalists should there be?"
   simulation_1:
-    - "This first contest sets the baseline that we can compare against in subsequent contests. All num_voters voters listen and vote on all num_songs songs. "
-  alphabetical:
+    - "This first contest sets the baseline that we can compare against in subsequent contests. All num_voters voters listen and vote on all num_songs songs."
+  First Contest:
     - "Hi there"
-  simulation_2:
+  The Power of Randomness:
     - "In our second contest, voters are randomly assigned a smaller subset of songs to listen to. They then submit a ballot ranking their top picks from that sample. Change the listening sample and ballot sizes to explore different outcomes."
-  simulation_3:
+  Nullifying Bloc Voting:
     - "In our third contest, members of a corrupt voting bloc will rank their leader's song at the top of the ballot no matter what, contorting the results. The corrupt songs are good but not great – about a B+. They're not bad, but shouldn't count among finalists."
