--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.1.0 ; python_version >= "3.10" and python_version < "4"
 click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
 decorator==5.1.1 ; python_version >= "3.10" and python_version < "4.0"
+emoji==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 entrypoints==0.4 ; python_version >= "3.10" and python_version < "4.0"
 gitdb==4.0.10 ; python_version >= "3.10" and python_version < "4.0"
 gitpython==3.1.31 ; python_version >= "3.10" and python_version < "4.0"
