--- a/src/text.yml
+++ b/src/text.yml
@@ -1,51 +1,65 @@
-story:
-  Voting Simulations:
+Voting Simulations:
+  story:
     - "How might we test different voting systems before deciding whether to use them in the real world? Welcome to our voting simulation. Before we start, let's talk about what we mean by simulation and why it's a good idea to start with that."
     - "Voting is complex. Just like many other phenomena in our world, trying out a “better” voting system might be too expensive or impractical. To solve such issues and first try out different scenarios, scientists often use Agent Based Simulation. The idea behind these simulations is simple: you create basic rules for imaginary actors to follow in an imaginary world, then let the agents interact based on those rules. You then observe what happens in the imaginary world to learn what might happen in the real world. One of the most famous examples of agent based simulations, the [Schellings Segregation Model](https://www.youtube.com/watch?v=JjfihtGefxk&ab_channel=RandomEconomist), contributed to Schelling's Nobel Prize in economics."
 
-  Imaginary Songs:
+Imaginary Songs:
+  story:
     - "For the simulation to test whether various voting systems lead to fair outcomes, we need to know who should be winning these contests. To do that, we define objective scores for each song."
     - "**Select various songs below to see the “objective” scores used in this simulation.**"
-  Imaginary Voters:
+
+Imaginary Voters:
+  story:
     - "Voters, however, do not vote objectively. Even musical experts have differences in opinion. To simulate subjectivity among voters, Each voter's vote is never exactly the objective score. Most likely it's close to the objective score because voters are experts, and sometimes it could be a little bit farther away. (Statistically speaking, we sample from a normal distribution, setting the objective score as the mean.)"
     - "The intent is to approximate nuanced differences in opinion among musical experts. If we assign two songs scores of eight and nine, respectively, our simulated voters will often disagree on which is better. But if we assign two songs scores of two and then, there should be no disagreement which is better."
     - "**Click (however many times you want) on the button below to see the subjective score around the selected song. Change the song from the list above to see votes reflect that song!**"
+  takeaway:
+    - In the simulation, You can see that voters all have differences. Many of them rate the song close to what it's worth, and some people are a bit off. Now what happens if thousands of these voters vote for songs with different voting methods?
 
-  Establishing a Baseline:
-    - "We use the objective scores to determine which songs should fairly win the contest, and we use the subjective scores to determine which song or songs a voter “likes” the best. To the right are the songs that should win our contest. To see how different voting methods perform, without further ado, let us introduce _The Isle of Musica_."
+Establishing a Baseline:
+  story:
+    - We use the objective scores to determine which songs should fairly win the contest, and we use the subjective scores to determine which song or songs a voter “likes” the best. To the right are the songs that should win our contest. To see how different voting methods perform, without further ado, let us introduce _The Isle of Musica_."      
 
-  The Isle of Musica:
+The Isle of Musica:
+  story:
     - "Welcome to the Isle of Musica — an idyllic locale where every citizen lives, breathes, even eats to make music. The Isle of Musica is inhabited by talented professional musicians, engineers, songwriters, and producers — all with different expertises and genre focuses. They all live on the Isle of Musica because of the one value they have in common: their reverence, respect, and passion for music."
     - "That is the one thing everyone can agree on here on the Isle: music is something to be studied and taken seriously. No one can agree, however, on which artists, albums, or songs are the “best,” — and if asked, they'd probably nominate themselves, or a close collaborator. So in the spirit of wanting to give her citizens their well-deserved props, Mayor Melody suggests the town hold a first annual contest to decide which of this year’s songs was SONG OF THE YEAR."
-    - "Anyone who believes a song they wrote this year is particularly special can nominate it for the contest. num_voters people live on the Isle, and when Mayor Melody sees the lists of nominees, surprise surprise, num_voters songs have been nominated. Everyone must have picked their personal best."
-    - "Running a contest with this many entrants is going to be tricky, but the mayor has a plan. First step, instead of trying to declare one winner in one go, Mayor Melody decides the first round of the contest should be to determine a short list of finalists."
+    - Anyone who believes a song they wrote this year is particularly special can nominate it for the contest. num_voters people live on the Isle, and when Mayor Melody sees the lists of nominees, surprise surprise, num_voters songs have been nominated. Everyone must have picked their personal best.
+    - Running a contest with this many entrants is going to be tricky, but the mayor has a plan. First step, instead of trying to declare one winner in one go, Mayor Melody decides the first round of the contest should be to determine a short list of finalists.
+  instructions:
+    - This contest will determine a small list of finalists from the larger pool of nominees. How many finalists should there be?
 
-  Keep it Simple:
+Keep it Simple:
+  story:
     - Mayor Melody wants to make this process as easy as possible. The easiest method she can think of is for each voter to simply vote for which songs they think should proceed to the next round. With num_winners finalists, each voter can vote for num_winners.
     - The mayor is a little concerned about how many songs have been nominated, but she knows her citizens are dedicated and thoughtful. So she adds all the songs to the playlist on her MySpace page and tells the island to start listening!
+  instructions:
+    - In this first contest, voters start listening to songs in the order they appear on the Mayor’s playlist. No voter has time to listen to every song. Each voters votes for their favorite num_winners songs they hear.
+  takeaway:
+    - In this simulation, we see that when voters are shown songs in alphabetical order, the rightful songs often do not receive the most votes! Does that sound simillar to a concern in the real world?
 
-  Ensuring Fairness:
+Ensuring Fairness:
+  story:
     - Mayor Melody wants to make sure her citizens have time to judge each song fairly, so she’s given everyone the month off to ensure they can take the time to listen and assess each one. Her and her staff have also printed off massive ballots. She knows her citizens want to know who their competition is, so it’s important the voters submit an ordered ranking of all num_songs songs.
+  instructions:
+    - In order to ensure a fair outcome, in this contest, all num_voters voters listen and vote on all num_songs songs. If every song were three and half minutes long, it would take total_time_str to listen to all of them continuously.
+  takeaway:
+    - In this simulation, Even when voters are pretty subjective, when they all listen to every song, their collective wisdom almost always picks the best songs. But this is not feasible in real life!
 
-  The Power of Randomness:
-    - "Of course, voting this way would take a long time. Plus, the citizens of the Isle don’t actually want a month off work – their work is their passion.They have albums to produce, sound edits to make – they don’t want to drop everything to listen and rate every single song. Plus, even for music lovers, working through num_songs sounds exhausting. Would everything just start to sound the same after awhile? Music lovers are superhuman, but not like that!"
-    - "So Mayor Melody has a better plan that will still ensure a fair election, and it relies on the fact that there are so many dedicated voters. Instead of receiving all num_songs songs, citizens will be sent a randomly chosen subset. This will be much more practical anyway, since the latest technology takes awhile to make it out to the Isle. Mayor Melody was worried voters wouldn’t have room for all num_songs on their Zunes."
+The Power of Randomness:
+  story:
+    - Of course, voting this way would take a long time. Plus, the citizens of the Isle don’t actually want a month off work – their work is their passion.They have albums to produce, sound edits to make – they don’t want to drop everything to listen and rate every single song. Plus, even for music lovers, working through num_songs sounds exhausting. Would everything just start to sound the same after awhile? Music lovers are superhuman, but not like that!
+    - So Mayor Melody has a better plan that will still ensure a fair election, and it relies on the fact that there are so many dedicated voters. Instead of receiving all num_songs songs, citizens will be sent a randomly chosen subset. This will be much more practical anyway, since the latest technology takes awhile to make it out to the Isle. Mayor Melody was worried voters wouldn’t have room for all num_songs on their Zunes.
+  instructions:
+    - In our second contest, voters are randomly assigned a smaller subset of songs to listen to. They then submit a ballot ranking their top picks from that sample. Change the listening sample and ballot sizes to explore different outcomes.
+  takeaway:
+    - In this simulation, we see that even if voters vote for a small subset of songs, the votes (mostly) reflect the best songs!
 
-  Nullifying Bloc Voting:
+Nullifying Bloc Voting:
+  story:
     - While making her rounds in the town square, Mayor Melody got a whiff that individual loyalties might threaten to throw off the otherwise fair Song of the Year contest. After some investigation, the cronyism going on between the heads of certain neighborhoods became clear. For example, in Double Reed Village, Al Pacone was running a campaign to get people to vote for his buddy Kid Lincoln's song, "Defenestration", by offering them a free session at his state-of-the-art studio. And Lucky Luke, over on de Sousa Cul de Sac, was telling his neighbors that if they voted for his song, "Entrepreneur," that he’d do them a big musical favor at a later date.
     - Mayor Melody had a feeling that this could possibly happen, so she began to think about how to mitigate this issue and ensure it didn’t highjack voting enough to skew the final results. Use the sliders below to see how much (or how little) cronyism affects the final result of the contest.
-
-  bloc_voting_conclusion:
-    - "**TAKEAWAY**: The performance of the above contest is surprisingly similar to that of the one before it. Even when every single voter is in cahoots with someone, the randomization of the contest prevents coordination – not enough of them get the chance to vote for their ring leader. At worst, by not voting for the deserved best song, rather than promote a corrupt song into the finalists, they open up a chance for a near-finalist to make into the list. This phenomen nullifies any attempts at collusion."
-
-instructions:
-  select_num_winners:
-    - "This contest will determine a small list of finalists from the larger pool of nominees. How many finalists should there be?"
-  Keep it Simple:
-    - In this first contest, voters start listening to songs in the order they appear on the Mayor’s playlist. No voter has time to listen to every song. Each voters votes for their favorite num_winners songs they hear.
-  Ensuring Fairness:
-    - In order to ensure a fair outcome, in this contest, all num_voters voters listen and vote on all num_songs songs. If every song were three and half minutes long, it would take total_time_str to listen to all of them continuously.
-  The Power of Randomness:
-    - "In our second contest, voters are randomly assigned a smaller subset of songs to listen to. They then submit a ballot ranking their top picks from that sample. Change the listening sample and ballot sizes to explore different outcomes."
-  Nullifying Bloc Voting:
-    - "In our third contest, members of a corrupt voting bloc will rank their leader's song at the top of the ballot no matter what, contorting the results. The corrupt songs are good but not great – about a B+. They're not bad, but shouldn't count among finalists."
+  instructions:
+    - In our third contest, members of a corrupt voting bloc will rank their leader's song at the top of the ballot no matter what, contorting the results. The corrupt songs are good but not great – about a B+. They're not bad, but shouldn't count among finalists.
+  takeaway:
+    - The performance of the above contest is surprisingly similar to that of the one before it. Even when every single voter is in cahoots with someone, the randomization of the contest prevents coordination – not enough of them get the chance to vote for their ring leader. At worst, by not voting for the deserved best song, rather than promote a corrupt song into the finalists, they open up a chance for a near-finalist to make into the list. This phenomen nullifies any attempts at collusion.
