--- a/src/text.yml
+++ b/src/text.yml
@@ -66,4 +66,4 @@ Nullifying Bloc Voting:
 
 Sandbox:
   story:
-    - Below are all the controls for these simulations. In addition, you can crank up the number of voters to greater than the num_voters featured in the story.
+    - Below are all the controls for this simulations. In addition, you can crank up the number of voters to greater than the num_voters featured in the story.
