--- a/src/text.yml
+++ b/src/text.yml
@@ -79,7 +79,7 @@ Conclusion:
     - 'The citizens of Isle of Musica are pleased with the final system for their SONG OF THE YEAR contest. With this newly introduced voting system:'
     - 1. The results feel fair to everyone — songs two thirds of the way down the ballot are deservedly making it into the list of finalists when using “The Power of Randomness” method.
     # -     AND
-    - Citizens of the Isle could reach this fair outcome while each only listening to 10% of the total songs, leaving them more time to engineer sounds, produce new music, and get inspired to record more. Voter fatigue was nearly eliminated! 
+    - 2. Citizens of the Isle could reach this fair outcome while each only listening to 10% of the total songs, leaving them more time to engineer sounds, produce new music, and get inspired to record more. Voter fatigue was nearly eliminated! 
     - Once the SONG OF THE YEAR contest was complete, the citizens of Musica felt recognized by their peers for their efforts and contributions to their Musical community. And in the end, it doesn’t matter who won the contest, because they know that the real winner here is the expertise and passion of their harmonious community.
 
 Sandbox:
