--- a/src/text.yml
+++ b/src/text.yml
@@ -24,7 +24,7 @@ Establishing a Baseline:
     - We use the _objective_ scores to determine which songs should fairly win the contest, and we use the _subjective_ scores to determine which song or songs a voter “likes” the best. Above are the songs that **should** win our contest. 
     - Now that we’ve established the basics, we want to invite you to take a trip with us to the ISLE OF MUSICA, where we’ll simulate various voting methods and see how they perform. ✈️☀️🎵🌴
 
-The Isle of Musica:
+Song of the Year Contest on The Isle of Musica:
   story:
     - 'Welcome to the Isle of Musica — an idyllic locale where every citizen lives, breathes, and eats music. The inhabitants of Isle of Musica are talented professional musicians, engineers, songwriters, and producers — all with different expertises and genre focuses. They all coexist on the Isle of Musica in service of a collectively cherished value: their reverence, respect, and passion for music. In charge is Mayor Melody, who oversees the Isle to ensure all happenings and conflicts are resolved harmoniously.'
     - Everyone on the Isle can agree that both live and recorded music is something to be studied and taken seriously. However, it’s more difficult for Musicas to agree on which artists, albums, or songs are the “best.” If asked, they'd likely nominate themselves, a close collaborator, or someone of whom they are a fan. So in the spirit of wanting to give everyone on Musica their well-deserved props, Mayor Melody establishes Musica’s first annual contest for SONG OF THE YEAR.
